Fix menu line break on smaller devices

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -92,8 +92,6 @@ nav {
   font-size: 1.1em;
 
   ul {
-    margin-right: 20px;
-
     li {
       border-right: 3px solid #E0DFE7;
       padding-right: 20px;
